--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@
     --textcolor: #18181a;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,400;0,700;0,800;1,400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&display=swap');
 
 html {
+    font-family: 'EB Garamond', serif;
     background-color: var(--backgroundc);
     font-size: large;
-    font-family: 'EB Garamond', serif;
 }
 
 table,
@@ -83,13 +83,15 @@ th {
     }
 
     .adder {
+        font-size: x-large;
         font-weight: bold;
         width: 100%;
         border: 2px solid;
         color: var(--headcolor);
         background-color: transparent;
-        padding: 4px;
+        padding: 0;
         margin: 0;
+        vertical-align: middle;
         transition: 1s .2s;
     }
 
